sic/static/style.css
/* ... */
.content-warning a.title,
.content-warning span.netloc {
  filter: grayscale(100%) opacity(50%) blur(2.5px);
}

.content-warning input[type="checkbox"]:checked ~ a.title,
.content-warning input[type="checkbox"]:checked ~ span.netloc {
  filter: none;
}

div.content-warning input[type="checkbox"] {
  transform: none;
}

body>main ul.posts>li.story .links{
  grid-area: links;
  color: #4d4d4d;
}
body>main ul.posts>li.story .links input[type="submit"],
body>main ul.posts>li.story .links a,
body>main ul.posts>li.story .links a:visited {
  color: var(--link-color);
}

header>* {
  place-self:center;
  min-width: 0;
}

header div.logo {
  font-weight: 800;
  background-color: var(--theme-color);
  color: white;
  height: min-content;
  width: min-content;
  min-width: auto;
  margin-top: -1rem;
  margin-bottom: -1rem;
  margin-right: -.5rem;
}

header .logo a,
header .logo a:visited {
  text-decoration: none;
  color: white;
  background-color: var(--theme-color);
  padding: .54rem .35rem;
  display: inline-block;
  font-size: 2rem;
  height: 3.5rem;
}

header .logo a:hover::before {
  content: "index";
  font-size: small;
  position: absolute;
  color: var(--fg-color);
  width: 3.5rem;
  text-align:center;
  margin-left: -.35rem;
  margin-top: 3.1rem;
  z-index: 1;
  background: var(--bg-color);
}

form.submit-story-form,form.submit-story-form fieldset,form.submit-story-form {
  display: flex;
  flex-direction: column;
  row-gap: 4px;
  width: max-content;
  width: clamp(10vw, 66ch, var(--main-width));
  max-width: var(--main-width);
  align-self: stretch;
}

form.submit-story-form summary {
  cursor: pointer;
}

form.submit-story-form details[open] summary {
  margin-bottom: 1rem;
}

form.submit-story-form input[type="checkbox"] {
  align-self: center;
}

form.submit-story-form textarea {
  align-self: stretch;
  max-width: var(--main-width);
  min-width: 100%;
  resize: both;
}

form.submit-comment-form {
  max-width: 66ch;
  max-width: clamp(10vw, 66ch, var(--main-width));
  width: max-content;
  display: flex;
  flex-direction: column;
  row-gap: .5rem;
  align-items: start;
}

.story-title {
  font-size: var(--story-title-font-size);
  margin-bottom: 0;
}


div.profile {
  display: flex;
  flex-flow: wrap;
  row-gap: 0rem;
  column-gap: 0rem;
  max-height: max-content;
  max-width: max-content;
  justify-content: center;
  border: 3px solid #333;
  border-radius: 3px;
}

.profile table {
  border: 0;
}

.profile #avatar {
  flex-basis: max-content;
  flex-grow: 1;
  display: flex;
  flex-direction: column;
  width: auto;
  height: auto;
  background-size: 1px 1px;
  place-content: center;
}

figure#avatar-thumbnail {
  height: 100%;
  max-width: 100px;
  padding: 3px;
  background-size: 1px 1px;
  display: flex;
  flex-direction: column;
  place-content: center;
  align-self: center;
  margin: 0;
}

figure#avatar-thumbnail figcaption {
  background: var(--bg-color);
  padding: 3px 5px;
  text-align: center;
  word-wrap: break-word;
  hyphens: auto;
  overflow: auto;
}

.votes {
  display: inline-block;
  margin-inline-start: -2px;
  margin-inline-end: 1px;
}

.votes>.score {
  text-align: center;
  display: inline-block;
}

.votes .upvote:hover, .votes .upvote.upvoted {
  border-bottom-color: var(--upvote-arrow-upvoted-color);
}

.votes .upvote {
  --upvote-arrow-height: .95rem;
  border-color: transparent transparent var(--upvote-arrow-color) transparent;
  border-style: solid;
  border-width: 1ex;
  border-bottom-width: var(--upvote-arrow-height);
  border-top-width: 0;
  text-decoration: none;
  width: 0px;
  height: 0;
  margin-bottom: 0px;
  padding: 0;
  display: inline-block;
  vertical-align: unset;
  transform: translateY(calc(1.1rem - var(--upvote-arrow-height)));
}

article.story>header> ul.messagelist {
  margin: 0;
}
article.story>header> ul.tags {
  margin-top: .2rem;
}
article.story>header> .votes .upvote {
  --upvote-arrow-height: 1rem;
}

article.story>header>.votes {
  grid-row: 1 / 1;
  grid-column: 1 / 1;
}
article.story>header>h1.story-title {
  grid-row: 1 / 1;
  grid-column: 2 / 2;
}
article.story>header>* {
  grid-column: 1 / 3;
}

article.story>header {
  display: grid;
  grid-template-columns: auto 1fr;
  grid-auto-rows: auto;
  column-gap: .2rem;
  row-gap: .2rem;
}

form.bookmark_form {
  display: inline;
}

input.bookmark_link {
  border: none;
  background: none;
  display: inline;
  text-decoration: underline;
  padding: 0;
  cursor: pointer;
  color: var(--link-color);
}

img.avatar-small {
  height: 1.5rem;
  width: 1.5rem;
  border-radius: 50%;
  object-fit: cover;
  object-position: center;
  display: inline-block;
  margin-bottom: -5px;
  margin-top: -5px;
  vertical-align: middle;
  margin: 0;
  margin-right: 5px;
  cursor: zoom-in;
  transform-origin: center;
}

img.avatar-small:hover {
  transition: all .2s .3s ease;
  transform: scale(6);
  border-radius: 0%;
  position: relative; /* new stack context */
  z-index: 1;
}

li.profile img.avatar-small {
  transform-origin: top right;
}

li.profile a {
    vertical-align: top;
}

a.feed, a.feed:visited {
  color: var(--feed-color);
  padding: 0px 2px;
  vertical-align: sub;
  border: none;
}

li:hover a.feed:after {
  content: attr(title);
  padding: 5px;
  position: absolute;
  width: min-content;
  text-align: center;
  border: 1px solid;
  background: white;
  border-radius: 6px;
  transform: translateX(-60%) translateY(-115%);
}


.upvote input {
  background: none;
  border: none;
  cursor: pointer;
  height: 1rem;
  transform: translateX(-.5rem);
  display: block;
  width: 1rem;
}

label.reply {
  cursor: pointer;
}

label.required:after {
    content: ' *';
    color: red;
}

.reply a {
  pointer-events: none;
}
.reply a:visited {
  color: LinkText;
}

form.delete-comment-form table,
form.delete-comment-form th,
form.delete-comment-form td {
  border: 0;
}

form.reply-form {
  display: none;
  width: max-content;
}

form.reply-form>div.reply-parent{
  display: none;
}
/* ... */

